--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -68,13 +68,23 @@
 
     <script>
       const secondHand = document.querySelector(".second-hand");
+      const minuteHand = document.querySelector(".min-hand");
+      const hourHand = document.querySelector(".hour-hand");
 
       function setDate() {
         const now = new Date();
+
         const sec = now.getSeconds();
-        console.log(sec);
         const secHand = (sec / 60) * 360 + 90;
         secondHand.style.transform = `rotate(${secHand}deg)`;
+
+        const min = now.getMinutes();
+        const minHand = (min / 60) * 360 + 90;
+        minuteHand.style.transform = `rotate(${minHand}deg)`;
+
+        const hr = now.getHours();
+        const hrHand = (hr / 60) * 360 + 90;
+        hourHand.style.transform = `rotate(${hrHand}deg)`;
       }
 
       setInterval(setDate, 1000);
