--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>JS + CSS Clock</title>
-    <link rel="icon" href="https://fav.farm/🔥" />
+    <title>Clock</title>
+    <link rel="icon" href="https://fav.farm/⏰" />
   </head>
   <body>
     <div class="clock">
@@ -83,7 +83,7 @@
         minuteHand.style.transform = `rotate(${minHand}deg)`;
 
         const hr = now.getHours();
-        const hrHand = (hr / 60) * 360 + 90;
+        const hrHand = (hr / 12) * 360 + 90; //12 placeholders for an hour, unlike 60 for secs and mins
         hourHand.style.transform = `rotate(${hrHand}deg)`;
       }
 
