--- a/02 - JS and CSS Clock/index.html
+++ b/02 - JS and CSS Clock/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Clock</title>
     <link rel="icon" href="https://fav.farm/⏰" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="clock">
@@ -14,80 +15,6 @@
       </div>
     </div>
 
-    <style>
-      html {
-        background: #018ded url(https://unsplash.it/1500/1000?image=881&blur=5);
-        background-size: cover;
-        font-family: "helvetica neue";
-        text-align: center;
-        font-size: 10px;
-      }
-
-      body {
-        margin: 0;
-        font-size: 2rem;
-        display: flex;
-        flex: 1;
-        min-height: 100vh;
-        align-items: center;
-      }
-
-      .clock {
-        width: 30rem;
-        height: 30rem;
-        border: 20px solid white;
-        border-radius: 50%;
-        margin: 50px auto;
-        position: relative;
-        padding: 2rem;
-        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef,
-          inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
-      }
-
-      .clock-face {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        transform: translateY(
-          -3px
-        ); /* account for the height of the clock hands */
-      }
-
-      .hand {
-        width: 50%;
-        height: 6px;
-        background: black;
-        position: absolute;
-        top: 50%;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-        transform: all 0.05s;
-        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
-      }
-    </style>
-
-    <script>
-      const secondHand = document.querySelector(".second-hand");
-      const minuteHand = document.querySelector(".min-hand");
-      const hourHand = document.querySelector(".hour-hand");
-
-      function setDate() {
-        const now = new Date();
-
-        const sec = now.getSeconds();
-        const secHand = (sec / 60) * 360 + 90;
-        secondHand.style.transform = `rotate(${secHand}deg)`;
-
-        const min = now.getMinutes();
-        const minHand = (min / 60) * 360 + 90;
-        minuteHand.style.transform = `rotate(${minHand}deg)`;
-
-        const hr = now.getHours();
-        const hrHand = (hr / 12) * 360 + 90; //12 placeholders for an hour, unlike 60 for secs and mins
-        hourHand.style.transform = `rotate(${hrHand}deg)`;
-      }
-
-      setInterval(setDate, 1000);
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
