--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Scoped CSS Variables and JS</title>
     <link rel="icon" href="https://fav.farm/✍️" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h2>Update CSS Variables with <span class="hl">JS</span></h2>
@@ -37,55 +38,6 @@
 
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
 
-    <style>
-      :root {
-        --base: yellow;
-        --blur: 10px;
-        --spacing: 20px;
-      }
-      img {
-        padding: var(--spacing);
-        background: var(--base);
-        filter: blur(var(--blur));
-      }
-
-      .hl {
-        color: var(--base);
-      }
-
-      body {
-        text-align: center;
-        background: #193549;
-        color: white;
-        font-family: "helvetica neue", sans-serif;
-        font-weight: 100;
-        font-size: 50px;
-      }
-
-      .controls {
-        margin-bottom: 50px;
-      }
-
-      input {
-        width: 100px;
-      }
-    </style>
-
-    <script>
-      const inputs = document.querySelectorAll(".controls input");
-      function handleUpdates() {
-        const suffix = this.dataset.sizing || "";
-        document.documentElement.style.setProperty(
-          `--${this.name}`,
-          this.value + suffix
-        );
-      }
-      inputs.forEach((input) =>
-        input.addEventListener("change", handleUpdates)
-      );
-      inputs.forEach((input) =>
-        input.addEventListener("mousemove", handleUpdates)
-      );
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
