--- a/02 - JS and CSS Clock/Final Code/index.html
+++ b/02 - JS and CSS Clock/Final Code/index.html
@@ -9,9 +9,24 @@
   <body>
     <div class="clock">
       <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div class="hands">
+          <div class="hand hour-hand"></div>
+          <div class="hand min-hand"></div>
+          <div class="hand second-hand"></div>
+        </div>
+        <div class="ticks">
+          <div class="center-circle" />
+          <div class="tick twelve"></div>
+          <div class="tick three"></div>
+          <div class="tick six"></div>
+          <div class="tick nine"></div>
+        </div>
+        <div class="numbers">
+          <div class="number twelve">12</div>
+          <div class="number three">3</div>
+          <div class="number six">6</div>
+          <div class="number nine">9</div>
+        </div>
       </div>
     </div>
 
